--- a/views/pages/reports/awbreport-by-employees.ejs
+++ b/views/pages/reports/awbreport-by-employees.ejs
@@ -17,7 +17,7 @@ var endate = new Date();
     <div class='card card-with-nav'>
       <div class="card-header">
         <div class="m-2 row row-nav-line">
-        <div class="card-title"> &nbsp;&nbsp;&nbsp;AWB Report By Employee</div>
+        <div class="card-title mt-2"> &nbsp;&nbsp;&nbsp;AWB Report By Employee</div>
 
           <button 
           class="btn btn-primary btn-round float-right m-2 ml-md-auto"  onclick="download_table_as_csv('awb-report-table-download')">
