--- a/views/pages/reports/awbreport.ejs
+++ b/views/pages/reports/awbreport.ejs
@@ -17,8 +17,8 @@ var endate = new Date();
     <div class='card card-with-nav'>
       <div class="card-header">
         <div class="row row-nav-line">
-          <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
-        <div class="card-title"> &nbsp;&nbsp;&nbsp;AWB Report</div>
+          <ul class="nav nav-tabs nav-line nav-color-primary mt-2" id="awb-list-tab" role="tablist">
+        <div class="card-title mt-3 ml-2"> &nbsp;&nbsp;&nbsp;AWB Report</div>
 
             <button onclick="download_table_as_csv('awb-report-table-download')" 
             class="btn btn-primary btn-round float-right m-2 ml-md-auto">
