--- a/views/pages/reports/packemppackagestatus.ejs
+++ b/views/pages/reports/packemppackagestatus.ejs
@@ -18,7 +18,7 @@ var endate = new Date();
       <div class="card-header">
 
         <div class="row row-nav-line">
-          <ul class="nav nav-tabs nav-line nav-color-primary" id="awb-list-tab" role="tablist">
+          <ul class="nav nav-tabs nav-line nav-color-primary mt-4 " id="awb-list-tab" role="tablist">
         <div class="card-title"> &nbsp;&nbsp;&nbsp;Package Employee Throughput</div>
 
             <button onclick="download_table_as_csv('awb-report-table-download')" 
