--- a/views/pages/reports/nodocsreport.ejs
+++ b/views/pages/reports/nodocsreport.ejs
@@ -41,7 +41,7 @@ var endate = new Date();
         -->
       <div class="card-h.eader d-flex align-items-left align-items-md-center flex-column flex-md-row"> 
 
-        <div class="card-title"> &nbsp;&nbsp;&nbsp;No Docs Package Report</div>
+        <div class="card-title ml-2"> &nbsp;&nbsp;&nbsp;No Docs Package Report</div>
 
           <button  onclick="download_table_as_csv('package-table-download')"
             class="btn btn-primary btn-round float-right m-2 ml-md-auto">
