--- a/views/shared/__sidebar.ejs
+++ b/views/shared/__sidebar.ejs
@@ -198,12 +198,12 @@
 
 
 
-				<li class="nav-item <% if (page.includes('/reports/all-report/download')) { %> active <% } %>">
+				<!-- <li class="nav-item <% if (page.includes('/reports/all-report/download')) { %> active <% } %>">
 					<a href="/reports/all-report/download">
 						<i class="fa fa-download"></i>
 						<p>My Reports </p>
 					</a>
-				</li>
+				</li> -->
 				<!-- <li class="nav-item <% if (page.includes('/fleet/')) { %> active <% } %>">
 					<a data-toggle="collapse" href="#reports">
 						<i class="fa fa-user"></i>
