--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -26,7 +26,8 @@
 		</div>
 		<div class="login-aside w-50 d-flex align-items-center justify-content-center bg-white">
 			<div class="container container-login container-transparent animated fadeIn">
-				<h3 class="text-center">Reset cust Password</h3>
+				<img src="../img/logo.jpg">
+				<h3 class="text-center">Reset Customer Password</h3>
 				<div class="login-form">
 					<div class="form-group">
 						<label for="username" class="placeholder"><b>Email</b></label>
