--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -20,7 +20,7 @@
 <body class="login">
 	<div class="wrapper wrapper-login wrapper-login-full p-0">
 		<div
-			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
+			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-primary-gradient">
 			<h1 class="title fw-bold text-white mb-3">9-5 Admin Portal</h1>
 			<p class="subtitle text-white op-7">9-5 Import</p>
 		</div>
