--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -49,7 +49,7 @@
           </div>
           <div class="form-group form-action-d-flex mb-3">
             <div class="col-md-6">
-              <a href="/login" id="show-signin" class="btn btn-danger btn-link w-100 fw-bold">Cancel</a>
+              <a href="/" id="show-signin" class="btn btn-danger btn-link w-100 fw-bold">Cancel</a>
             </div>
             <input type="submit" class="btn btn-primary btn-round col-md-5 float-right mt-3 mt-sm-0 fw-bold"
               value="Reset Password" />
