--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -26,7 +26,7 @@
 		</div>
 		<div class="login-aside w-50 d-flex align-items-center justify-content-center bg-white">
 			<div class="container container-login container-transparent animated fadeIn">
-				<img src="../img/logo.jpg">
+				<img src="../img/logo.jpg" class=" m-3"><br/>
 				<h3 class="text-center">Reset Customer Password</h3>
 				<div class="login-form">
 					<div class="form-group">
@@ -39,17 +39,20 @@
 					<div class="form-group form-action-d-flex mb-3">
 						<a href="/customer/login" id='back' class="link">Back</a>
 						<a href="#" id='customer_send_request'
-							class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold"
+							class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold"
 							style='background-color:#6C0F0F'>Send Request</a>
 					</div>
 				</div>
 			</div>
 			<div class="container container-signup container-transparent animated fadeIn" style="display: none;">
+				<img src="../img/logo.jpg" class="m-4">
+				<br/>
 				<h3 class="text-center">Email Sent</h3>
 				<div class="login-form">
+					
 					<span class="msg">A request has been sent to your email address. Please check your email.</span>
 					<div class="form-group form-action-d-flex mb-3">
-						<a href="/customer/login" id='back2' class="btn btn-secondary col-md-5 float-right mt-3 mt-sm-0 fw-bold"
+						<a href="/customer/login" id='back2' class="btn btn-primary col-md-5 float-right mt-3 mt-sm-0 fw-bold"
 							style='background-color:#6C0F0F'>Back</a>
 					</div>
 				</div>
