--- a/views/pages/customerUploadInvoices.ejs
+++ b/views/pages/customerUploadInvoices.ejs
@@ -83,7 +83,10 @@
       <%  }  %>
     
 
-      <% }}  %>
+      <% }}else{  %>
+        <td>0</td>
+
+        <% } %>
       <td>
         <a href="javascript:void(0)" onclick="showUploadInvoiceModal('<%-pkg._id%>')" class="btn btn-link btn-primary px-3" data-toggle="tooltip"
           data-original-title="View Details"> <i class="fas fa-upload"></i></a>
