--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -5,7 +5,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge" />
   <title>Password Reset</title>
   <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-  <link rel="icon" href="/lib/images/favicon.png" type="image/x-icon" />
+  <!-- <link rel="icon" href="/lib/images/favicon.png" type="image/x-icon" /> -->
+	<link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 
   <!-- Fonts and icons -->
   <script src="../../assets/js/plugin/webfont/webfont.min.js"></script>
@@ -27,7 +28,7 @@
 <body class="login">
   <div class="wrapper wrapper-login wrapper-login-full p-0">
     <div
-        class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
+        class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-primary-gradient">
         <h1 class="title fw-bold text-white mb-3">9-5 Admin Portal</h1>
         <p class="subtitle text-white op-7">9-5 Import</p>
 	</div>
@@ -36,22 +37,48 @@
         <% if(success == false) { %>
         <h3 class="text-center">Token Expired</h3>
         <% } else { %>
-        <h3 class="text-center">Reset Password</h3>
+         
+          <img src= "/img/logo.jpg" className="m-3">
+
+
+
+        <h3 class="text-center mt-3">Reset Password</h3>
         <input type="hidden" class="user-info" value="<%= JSON.stringify(customer) %>">
         <form action="<%reset_link%>" method='post' class="reset-form">
           <div class="form-group">
+
             <label for="password" class="placeholder"><b>New Password</b></label>
+            <div class="position-relative">
+
             <input id="password" name="password" type="password" class="form-control" required>
+
+
+              <div class="show-password">
+                <i class="icon-eye"></i>
+              </div>
+            </div>
+
+
+
           </div>
           <div class="form-group">
             <label for="confirm_password" class="placeholder"><b>Confirm Password</b></label>
+         
+            <div class="position-relative">
+
             <input id="confirm_password" name="confirm_password" type="password" class="form-control" required>
+        
+            <div class="show-password">
+              <i class="icon-eye"></i>
+            </div>
+            </div>
+        
           </div>
           <div class="form-group form-action-d-flex mb-3">
             <div class="col-md-6">
               <a href="/" id="show-signin" class="btn btn-danger btn-link w-100 fw-bold">Cancel</a>
             </div>
-            <input type="submit" class="btn btn-primary btn-round col-md-5 float-right mt-3 mt-sm-0 fw-bold"
+            <input type="submit" class="btn btn-primary  col-md-5 float-right mt-3 mt-sm-0 fw-bold"
               value="Reset Password" />
           </div>
         </form>
