--- a/views/password-set-success.ejs
+++ b/views/password-set-success.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Reset Password </title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-    <link rel="icon" href="/lib/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="//favicon.png" type="image/x-icon" />
 
     <!-- Fonts and icons -->
     <script src="/assets/js/plugin/webfont/webfont.min.js"></script>
@@ -34,6 +34,8 @@
 		</div>
         <div class="w-50 d-flex align-items-center justify-content-center bg-white">
             <div class="container container-login container-transparent animated fadeIn w-100 text-center">
+          <img src= "/img/logo.jpg" className="m-3">
+
                 <h3 class="title">Password Reset Successfully.</h3>
                 <!-- <h4 class="title">Now you can login to the Portal.</h4> -->
                 <a href="/" class="btn btn-primary btn-round mt-5">Log In</a>
