--- a/views/password-set-customer-success.ejs
+++ b/views/password-set-customer-success.ejs
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <title>Reset Password </title>
     <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
-    <link rel="icon" href="/lib/images/favicon.png" type="image/x-icon" />
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 
     <!-- Fonts and icons -->
     <script src="/assets/js/plugin/webfont/webfont.min.js"></script>
@@ -28,13 +28,15 @@
 <body class="login">
     <div class="wrapper wrapper-login wrapper-login-full p-0">
         <div
-			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
+			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-primary-gradient">
 			<h1 class="title fw-bold text-white mb-3">9-5 Admin Portal</h1>
 			<p class="subtitle text-white op-7">9-5 Import</p>
 		</div>
         <div class="w-50 d-flex align-items-center justify-content-center bg-white">
             <div class="container container-login container-transparent animated fadeIn w-100 text-center">
-                <h3 class="title">Password Reset Successfully.</h3>
+          <img src= "/img/logo.jpg" className="m-3">
+
+                <h3 class="title m-3">Password Reset Successfully.</h3>
                 <!-- <h4 class="title">Now you can login to the Portal.</h4> -->
             </div>
         </div>
