--- a/views/password-set-success.ejs
+++ b/views/password-set-success.ejs
@@ -1,52 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
+  <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title>Reset Password </title>
-    <meta content='width=device-width, initial-scale=1.0, shrink-to-fit=no' name='viewport' />
+    <title>Reset Password</title>
+    <meta
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+      name="viewport"
+    />
     <link rel="icon" href="//favicon.png" type="image/x-icon" />
 
     <!-- Fonts and icons -->
     <script src="/assets/js/plugin/webfont/webfont.min.js"></script>
     <script>
-        WebFont.load({
-            google: { "families": ["Lato:300,400,700,900"] },
-            custom: { "families": ["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['/assets/css/fonts.min.css'] },
-            active: function () {
-                sessionStorage.fonts = true;
-            }
-        });
+      WebFont.load({
+        google: { families: ["Lato:300,400,700,900"] },
+        custom: {
+          families: [
+            "Flaticon",
+            "Font Awesome 5 Solid",
+            "Font Awesome 5 Regular",
+            "Font Awesome 5 Brands",
+            "simple-line-icons",
+          ],
+          urls: ["/assets/css/fonts.min.css"],
+        },
+        active: function () {
+          sessionStorage.fonts = true;
+        },
+      });
     </script>
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="/assets/css/bootstrap.min.css">
-    <link rel="stylesheet" href="/assets/css/atlantis.min.css">
-    <link rel="stylesheet" href="/assets/css/bootstrap-pincode-input.css">
-</head>
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/atlantis.min.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap-pincode-input.css" />
+  </head>
 
-<body class="login">
+  <body class="login">
     <div class="wrapper wrapper-login wrapper-login-full p-0">
+      <div
+        class="
+          login-aside
+          w-50
+          d-flex
+          flex-column
+          align-items-center
+          justify-content-center
+          text-center
+          bg-secondary-gradient
+        "
+      >
+        <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "postboxesetc" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
+        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "postboxesetc" ? "More Than A Post Box" : "Always On Time" %></p>
+      </div>
+      <div
+        class="w-50 d-flex align-items-center justify-content-center bg-white"
+      >
         <div
-			class="login-aside w-50 d-flex flex-column align-items-center justify-content-center text-center bg-secondary-gradient">
-			<h1 class="title fw-bold text-white mb-3">9-5 Admin Portal</h1>
-			<p class="subtitle text-white op-7">9-5 Import</p>
-		</div>
-        <div class="w-50 d-flex align-items-center justify-content-center bg-white">
-            <div class="container container-login container-transparent animated fadeIn w-100 text-center">
-          <img src= "/img/logo.jpg" className="m-3">
+          class="
+            container container-login container-transparent
+            animated
+            fadeIn
+            w-100
+            text-center
+          "
+        >
+          <img src="/img/logo.jpg" className="m-3" />
 
-                <h3 class="title">Password Reset Successfully.</h3>
-                <!-- <h4 class="title">Now you can login to the Portal.</h4> -->
-                <a href="/" class="btn btn-primary btn-round mt-5">Log In</a>
-            </div>
+          <h3 class="title">Password Reset Successfully.</h3>
+          <!-- <h4 class="title">Now you can login to the Portal.</h4> -->
+          <a href="/" class="btn btn-primary btn-round mt-5">Log In</a>
         </div>
+      </div>
     </div>
     <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="/assets/js/core/popper.min.js"></script>
     <script src="/assets/js/core/bootstrap.min.js"></script>
     <script src="/assets/js/atlantis.min.js"></script>
-</body>
-
+  </body>
 </html>
