--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -20,11 +20,21 @@
       media="all"
     />
     <link rel="stylesheet" href="../assets/css/fonts.min.css" media="all" />
+    <link rel="stylesheet" href="../../assets/css/fonts.min.css" media="all" />
+
 
     <!-- CSS Files -->
     <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="../assets/css/atlantis.min.css" />
     <link rel="stylesheet" href="../assets/css/jquery.toast.min.css" />
+    <% try{ if(isPostbox) { %> 
+
+    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="../../assets/css/atlantis.min.css" />
+    <link rel="stylesheet" href="../../assets/css/jquery.toast.min.css" />
+    <% }}catch(e){} %> 
+
+
   </head>
 
   <body class="login">
@@ -61,7 +71,12 @@
             fadeIn
           "
         >
+        <% if(isPostbox) { %> 
+          <img src="../../img/logo.jpg" class="m-3" /><br />
+          <% } else { %>
           <img src="../img/logo.jpg" class="m-3" /><br />
+          <% } %>
+
           <h3 class="text-center">Reset Customer Password</h3>
           <div class="login-form">
             <div class="form-group">
@@ -105,7 +120,12 @@
           "
           style="display: none"
         >
+        <% if(isPostbox) { %> 
+
+          <img src="../../img/logo.jpg" class="m-4" />
+          <% }else{ %>
           <img src="../img/logo.jpg" class="m-4" />
+          <% } %>
           <br />
           <h3 class="text-center">Email Sent</h3>
           <div class="login-form">
@@ -140,5 +160,16 @@
     <script src="../assets/js/core/bootstrap.min.js"></script>
     <script src="../js/jquery.toast.min.js"></script>
     <script src="../js/customer/forgot_password.js"></script>
+    <% try{ if(isPostbox) { %> 
+
+    <script src="../../assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="../../assets/js/core/popper.min.js"></script>
+    <script src="../../assets/js/core/bootstrap.min.js"></script>
+    <script src="../../js/jquery.toast.min.js"></script>
+    <script src="../../js/customer/forgot_password.js"></script>
+    <% }}catch(e){} %> 
+
+
   </body>
 </html>
