--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,6 +70,7 @@
           "
         >
           <img src="/img/logo.jpg" />
+          <input type="hidden" class="postbox" value=<%= process.CLIENT_URL %> >
           <h3 class="text-center mt-3">Welcome to Customer Portal</h3>
           <form id="customer-login-form">
             <div class="login-form">
