--- a/views/index.ejs
+++ b/views/index.ejs
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <title><%= process.CLIENT_URL == "postboxesetc" ? "Post Boxes ETC" : "9-5 Import Portal" %></title>
+    <title><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "Post Boxes ETC" : "9-5 Import Portal" %></title>
     <meta
       content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
       name="viewport"
@@ -49,8 +49,8 @@
           bg-primary-gradient
         "
       >
-        <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "postboxesetc" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
-        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "postboxesetc" ? "More Than A Post Box" : "Always On Time" %></p>
+        <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
+        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "More Than A Post Box" : "Always On Time" %></p>
       </div>
       <div
         class="
