--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -11,7 +11,11 @@
     <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
 
     <!-- Fonts and icons -->
+    <% if(postbox){ %>
+    <script src="../../../assets/js/plugin/webfont/webfont.min.js"></script>
+    <% }else{ %>
     <script src="../../assets/js/plugin/webfont/webfont.min.js"></script>
+    <%  } %>
     <script>
       WebFont.load({
         google: { families: ["Lato:300,400,700,900"] },
@@ -146,6 +150,22 @@
         </div>
       </div>
     </div>
+    <% if(postbox){ %>
+
+    <script src="../../../assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="../../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="../../../assets/js/core/popper.min.js"></script>
+    <script src="../../../assets/js/core/bootstrap.min.js"></script>
+    <script src="../../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+    <script src="../../../assets/js/atlantis.min.js"></script>
+    <!-- Notify -->
+    <script src="../../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+
+    <script src="../js/utils.js"></script>
+    <script src="../js/auth/new-password-customer.js"></script>
+    <% }else{ %>
+
+      
     <script src="../../assets/js/core/jquery.3.2.1.min.js"></script>
     <script src="../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="../../assets/js/core/popper.min.js"></script>
@@ -157,5 +177,7 @@
 
     <script src="/js/utils.js"></script>
     <script src="/js/auth/new-password-customer.js"></script>
+
+      <% } %>
   </body>
 </html>
