--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -152,17 +152,27 @@
     </div>
     <% if(postbox){ %>
 
+    
     <script src="../../../assets/js/core/jquery.3.2.1.min.js"></script>
+
     <script src="../../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
     <script src="../../../assets/js/core/popper.min.js"></script>
     <script src="../../../assets/js/core/bootstrap.min.js"></script>
     <script src="../../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
     <script src="../../../assets/js/atlantis.min.js"></script>
     <!-- Notify -->
-    <script src="../../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+    <!-- <script src="../../../assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script> -->
 
-    <script src="../js/utils.js"></script>
-    <script src="../js/auth/new-password-customer.js"></script>
+    <script src="../public/assets/js/plugin/bootstrap-notify/bootstrap-notify.min.js"></script>
+
+
+    <script src="../../../js/utils.js"></script>
+    <script src="../../../js/utils.js"></script>
+
+    <script src="../../../js/auth/new-password-customer.js"></script>
+
+    <script src="../../../js/auth/new-password-customer.js"></script>
+
     <% }else{ %>
 
       
