--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -72,7 +72,7 @@
           "
         >
         <% if(isPostbox) { %> 
-          <img src="../../img/logo.jpg" class="m-3" /><br />
+        <center>  <img src="../../img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
           <% } else { %>
           <img src="../img/logo.jpg" class="m-3" /><br />
           <% } %>
@@ -122,7 +122,8 @@
         >
         <% if(isPostbox) { %> 
 
-          <img src="../../img/logo.jpg" class="m-4" />
+          <center>  <img src="../../img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
+
           <% }else{ %>
           <img src="../img/logo.jpg" class="m-4" />
           <% } %>
