--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -14,7 +14,7 @@ var endate = new Date();
   <div class="col-md-6">
     <div class="card full-height">
       <div class="card-body">
-        <div class="card-title">Overall statistics</div>
+        <div class="card-title">Overall statisticss</div>
         <div class="card-category">Daily information about statistics in system</div>
         <div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
           <div class="px-2 pb-2 pb-md-0 text-center">
@@ -80,8 +80,9 @@ var endate = new Date();
   </div>
 
 </div>
-<input type="hidden" name="typeTable" id="typeTable" value="<%=query.type?query.type:dateRangeDefault%>">
-<div class="row">
+
+<!-- <input type="hidden" name="typeTable" id="typeTable" value="<%=query.type?query.type:dateRangeDefault%>"> -->
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="card full-height">
       <div class="card-header">
@@ -94,7 +95,7 @@ var endate = new Date();
           
         </div>
         <div class="card-tools  pd-18 col-md-12">
-          <!--<form method="post" onsubmit="filterData(event)">-->
+        
             
             <div class="row">
               <div class="col-md-4"> 
@@ -135,7 +136,7 @@ var endate = new Date();
               
               <div class="col-md-2 pl-10">
                 <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_postbox_report()">
-                <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
+              <input type="submit" value="Filter" class="btn btn-primary" /> 
               </div>
             </div>
           
@@ -146,7 +147,7 @@ var endate = new Date();
             <thead>
             <tr>
               <th>Original Barcode#</th>
-              <!-- <th>Date Created</th> -->
+              
               <th>Package Status</th>
               <th>AWB Number</th>
               <th>Customer Name</th>
@@ -160,8 +161,8 @@ var endate = new Date();
       </div>
     </div>
   </div>
-</div>
-<div class="row">
+</div> -->
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="card full-height">
       <div class="card-header">
@@ -211,7 +212,7 @@ var endate = new Date();
             </div>
             <input type="hidden" name="filter_for" value="9to5" />            
           <div class="col-md-2 pl-10">
-            <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
+             <input type="submit" value="Filter" class="btn btn-primary" />
             <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;margin-left: 1%"  onclick="generate_ninetofive_package_report()">
           </div>
       </div>
@@ -222,7 +223,7 @@ var endate = new Date();
           <thead>
           <tr>
             <th>Original Barcode#</th>
-            <!-- <th>Date Created</th> -->
+             <th>Date Created</th>
             <th>Package Status</th>
             <th>AWB Number</th>
             <th>Customer Name</th>
@@ -235,9 +236,9 @@ var endate = new Date();
     </div>  
     </div>
   </div>
-</div>
-</div>
-<div class="row">
+</div> -->
+<!-- </div> -->
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="card full-height">
       <div class="card-header">
@@ -249,7 +250,7 @@ var endate = new Date();
       <div class="card-body daterangepickerbody-1">
         
         <div class="card-tools  pd-18 col-md-12">
-          <!-- <form method="post" onsubmit="filterData(event)"> -->           
+           <form method="post" onsubmit="filterData(event)"> 
               <div class="row">
                 <div class="col-md-4"> 
                   <div class="row"> 
@@ -289,10 +290,10 @@ var endate = new Date();
               <input type="hidden" name="filter_for" value="noDocs" />              
               <div class="col-md-2 pl-10">
                 <input type="button" value="Generate CSV" class="btn btn-primary" style="float: left;"  onclick="generate_nodocs_package_report()">
-                <!-- <input type="submit" value="Filter" class="btn btn-primary" /> -->
+                 <input type="submit" value="Filter" class="btn btn-primary" /> 
               </div>
             </div>
-          <!-- </form> -->
+          
         </div>
         
         <div class="table-responsive" style="margin-top: 10px;">
@@ -313,9 +314,9 @@ var endate = new Date();
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
-<div class="row">
+<!-- <div class="row">
   <div class="col-md-12">
     <div class="card full-height">
       <div class="card-header">
@@ -343,7 +344,7 @@ var endate = new Date();
           <thead>
             <tr>
               <th>Username</th>
-              <!-- <th>Date Created</th> -->
+               <th>Date Created</th> 
               <th>Name</th>
               <th>Total AWB Created</th>
               <th>User Email</th>
@@ -356,7 +357,7 @@ var endate = new Date();
       </div>
     </div>
   </div>
-</div>
+</div> -->
 
 <script type="text/javascript">
   function filterData(event) {
