--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -9,9 +9,11 @@
     />
     <link
       rel="icon"
-      href="https://via.placeholder.com/32x32"
+      href="/img/favicon.png"
       type="image/x-icon"
     />
+    <link rel="icon" href="/img/favicon.png" type="image/x-icon" />
+
 
     <!-- Fonts and icons -->
     <link
@@ -95,7 +97,13 @@
               >
             </div>
             <div class="form-group form-action-d-flex mb-3">
-              <a href="/customer/login" id="back" class="link">Back</a>
+              <% if(isPostbox) {%>
+              <a href="/customer/postbox/login" id="back" class="link">Back</a>
+              <% }else{%>
+                <a href="/customer/login" id="back" class="link">Back</a>
+
+              <% }%>
+
               <a
                 href="#"
                 id="customer_send_request"
@@ -135,7 +143,22 @@
               email.</span
             >
             <div class="form-group form-action-d-flex mb-3">
+              <%if(isPostbox){ %>
               <a
+                href="/customer/postbox/login"
+                id="back2"
+                class="
+                  btn btn-primary
+                  col-md-5
+                  float-right
+                  mt-3 mt-sm-0
+                  fw-bold
+                "
+                style="background-color: #6c0f0f"
+                >Back</a
+              >
+              <% }else{ %>
+                <a
                 href="/customer/login"
                 id="back2"
                 class="
@@ -148,6 +171,7 @@
                 style="background-color: #6c0f0f"
                 >Back</a
               >
+              <% } %>
             </div>
           </div>
         </div>
