--- a/views/forgot_password.ejs
+++ b/views/forgot_password.ejs
@@ -9,7 +9,7 @@
     />
     <link
       rel="icon"
-      href="https://via.placeholder.com/32x32"
+      href="/img/favicon.png"
       type="image/x-icon"
     />
 
