--- a/views/login.ejs
+++ b/views/login.ejs
@@ -69,7 +69,12 @@
             fadeIn
           "
         >
+        <% if(result){ %>
+          <img src="/../../img/postboxlogo.PNG"  width="200"  height="100" className="m-3" />
+
+        <% }else{ %>
           <img src="/img/logo.jpg" />
+          <% } %>
           <input type="hidden" class="postbox" value=<%= process.CLIENT_URL %> >
           <h3 class="text-center mt-3">Welcome to Customer Portal</h3>
           <form id="customer-login-form">
