--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -54,8 +54,8 @@
           bg-primary-gradient
         "
       >
-        <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "postboxesetc" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
-        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "postboxesetc" ? "More Than A Post Box" : "Always On Time" %></p>
+        <h1 class="title fw-bold text-white mb-3"><%= postbox == true ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
+        <p class="subtitle text-white op-7"><%= postbox == true ? "More Than A Post Box" : "Always On Time" %></p>
       </div>
       <div
         class="
@@ -77,9 +77,12 @@
           <% if(success == false) { %>
           <h3 class="text-center">Token Expired</h3>
           <% } else { %>
-
+            <% if(postbox){ %>
+          <img src="/../../img/postboxlogo.PNG"  width="200"  height="100" className="m-3" />
+          <% }else{ %>
           <img src="/img/logo.jpg" className="m-3" />
 
+            <% } %>
           <h3 class="text-center mt-3">Reset Password</h3>
           <input
             type="hidden"
