--- a/views/password-set-success.ejs
+++ b/views/password-set-success.ejs
@@ -65,8 +65,11 @@
             text-center
           "
         >
-          <img src="/img/logo.jpg" className="m-3" />
-
+        <% if(process.CLIENT_URL == "postboxesetc"){ %>
+          <img src="/../../img/postboxlogo.PNG"  width="200"  height="100" className="m-3" />
+          <% }else{ %>
+            <img src="/img/logo.jpg" className="m-3" />
+            <% } %>
           <h3 class="title">Password Reset Successfully.</h3>
           <!-- <h4 class="title">Now you can login to the Portal.</h4> -->
           <a href="/" class="btn btn-primary btn-round mt-5">Log In</a>
