--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -266,7 +266,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <h2 class="modal-title">Print Package Label</h2>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+        <button type="button" class="close"  data-dismiss="modal" aria-label="Close">
           <span aria-hidden="true">×</span>
         </button>
       </div>
@@ -354,7 +354,8 @@
           </div>
           <div class="input-group-append col-lg-2">
             <a href="#" id="refreshBarcode" onclick="refreshBarcode()">
-              <span class="input-group-text">Refresh</span></a>
+              <span class="input-group-text" >Refresh</span>
+            </a>
           </div>
           <div class="input-group-append col-lg-1">
             <a href="#" data-toggle="modal" data-backdrop="static" data-target="#add-barcode-popup" onclick="closeAddPackage()">
@@ -870,7 +871,7 @@
         </div>
         <div class="modal-footer">
           <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
-          <button type="submit" class="btn btn-primary" id='save-barcode'>Create</button>
+          <button type="submit" class="btn btn-primary" id='save-barcode'  >Create</button>
         </div>
       </div>
     </form>
