--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,6 +8,8 @@
       name="viewport"
     />
     <%= console.log(process ,"proces")  %>
+    <% console.log(process ,"proces")  %>
+
     <link rel="icon" href="../img/favicon.png" type="image/x-icon" />
 
     <!-- Fonts and icons -->
