--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -179,20 +179,20 @@
     </div>
     <!--<script>window.$ = window.jQuery = require('../assets/js/core/jquery.3.2.1.min.js');</script>
 	-->
-    <script src="../assets/js/core/jquery.3.2.1.min.js"></script>
-    <script src="../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <script src="../assets/js/core/popper.min.js"></script>
-    <script src="../assets/js/core/bootstrap.min.js"></script>
-    <script src="../js/jquery.toast.min.js"></script>
-    <script src="../js/customer/forgot_password.js"></script>
+    <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="/assets/js/core/popper.min.js"></script>
+    <script src="/assets/js/core/bootstrap.min.js"></script>
+    <script src="/js/jquery.toast.min.js"></script>
+    <script src="/js/customer/forgot_password.js"></script>
     <% try{ if(isPostbox) { %> 
 
-    <script src="../../assets/js/core/jquery.3.2.1.min.js"></script>
-    <script src="../../assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
-    <script src="../../assets/js/core/popper.min.js"></script>
-    <script src="../../assets/js/core/bootstrap.min.js"></script>
-    <script src="../../js/jquery.toast.min.js"></script>
-    <script src="../../js/customer/forgot_password.js"></script>
+    <script src="/assets/js/core/jquery.3.2.1.min.js"></script>
+    <script src="/assets/js/plugin/jquery-ui-1.12.1.custom/jquery-ui.min.js"></script>
+    <script src="/assets/js/core/popper.min.js"></script>
+    <script src="/assets/js/core/bootstrap.min.js"></script>
+    <script src="/js/jquery.toast.min.js"></script>
+    <script src="/js/customer/forgot_password.js"></script>
     <% }}catch(e){} %> 
 
 
