committing changes for url issue

--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -21,19 +21,19 @@
       href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900"
       media="all"
     />
-    <link rel="stylesheet" href="../assets/css/fonts.min.css" media="all" />
-    <link rel="stylesheet" href="../../assets/css/fonts.min.css" media="all" />
+    <link rel="stylesheet" href="/assets/css/fonts.min.css" media="all" />
+    <link rel="stylesheet" href="/assets/css/fonts.min.css" media="all" />
 
 
     <!-- CSS Files -->
-    <link rel="stylesheet" href="../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../assets/css/atlantis.min.css" />
-    <link rel="stylesheet" href="../assets/css/jquery.toast.min.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/atlantis.min.css" />
+    <link rel="stylesheet" href="/assets/css/jquery.toast.min.css" />
     <% try{ if(isPostbox) { %> 
 
-    <link rel="stylesheet" href="../../assets/css/bootstrap.min.css" />
-    <link rel="stylesheet" href="../../assets/css/atlantis.min.css" />
-    <link rel="stylesheet" href="../../assets/css/jquery.toast.min.css" />
+    <link rel="stylesheet" href="/assets/css/bootstrap.min.css" />
+    <link rel="stylesheet" href="/assets/css/atlantis.min.css" />
+    <link rel="stylesheet" href="/assets/css/jquery.toast.min.css" />
     <% }}catch(e){} %> 
 
 
