--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -17,7 +17,6 @@
 
     <!-- Fonts and icons -->
     <link
-      rel="stylesheet"
       href="http://fonts.googleapis.com/css?family=Lato:300,400,700,900"
       media="all"
     />
@@ -74,9 +73,9 @@
           "
         >
         <% if(isPostbox) { %> 
-        <center>  <img src="../../img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
+        <center>  <img src="/img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
           <% } else { %>
-          <img src="../img/logo.jpg" class="m-3" /><br />
+          <img src="/img/logo.jpg" class="m-3" /><br />
           <% } %>
 
           <h3 class="text-center">Reset Customer Password</h3>
@@ -130,10 +129,10 @@
         >
         <% if(isPostbox) { %> 
 
-          <center>  <img src="../../img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
+          <center>  <img src="/img/postboxlogo.PNG" class="m-3"  width="200"  height="100"/><br /></center>
 
           <% }else{ %>
-          <img src="../img/logo.jpg" class="m-4" />
+          <img src="/img/logo.jpg" class="m-4" />
           <% } %>
           <br />
           <h3 class="text-center">Email Sent</h3>
