--- a/views/login.ejs
+++ b/views/login.ejs
@@ -70,7 +70,7 @@
           "
         >
         <% if(result){ %>
-      <center>    <img src="/../../img/postboxlogo.PNG"  width="200"  height="50" className="m-3" /></center>
+      <center>    <img src="/../../img/postboxlogo.jpg"  width="200"  height="50" className="m-3" /></center>
 
         <% }else{ %>
           <img src="/img/logo.jpg" />
