--- a/views/customer_forgot_password.ejs
+++ b/views/customer_forgot_password.ejs
@@ -73,7 +73,7 @@
           "
         >
         <% if(isPostbox) { %> 
-        <center>  <img src="/img/postboxlogo.jpg" class="m-3"  width="200"  height="50"/><br /></center>
+        <center>  <img src="/img/postboxlogo.jpg" class="m-3"  width=300"/><br /></center>
           <% } else { %>
           <img src="/img/logo.jpg" class="m-3" /><br />
           <% } %>
@@ -129,7 +129,7 @@
         >
         <% if(isPostbox) { %> 
 
-          <center>  <img src="/img/postboxlogo.jpg" class="m-3"  width="200"  height="50"/><br /></center>
+          <center>  <img src="/img/postboxlogo.jpg" class="m-3"  width="300" /><br /></center>
 
           <% }else{ %>
           <img src="/img/logo.jpg" class="m-4" />
