--- a/views/password-set-customer-success.ejs
+++ b/views/password-set-customer-success.ejs
@@ -66,7 +66,7 @@
           "
         >
         <% if(process.CLIENT_URL == "postboxesetc"){ %>
-          <img src="/../../img/postboxlogo.jpg"  width="200"  height="50" className="m-3" />
+        <center><img src="/../../img/postboxlogo.jpg"  width="300"  className="m-3" /></center>
 
             <% }else{ %>
             <img src="/img/logo.jpg" className="m-3" />
