--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -78,7 +78,7 @@
           <h3 class="text-center">Token Expired</h3>
           <% } else { %>
             <% if(postbox){ %>
-          <img src="/../../img/postboxlogo.jpg"  width="200"  height="50" className="m-3" />
+         <center> <img src="/../../img/postboxlogo.jpg"  width="300"   className="m-3" /></center>
           <% }else{ %>
           <img src="/img/logo.jpg" className="m-3" />
 
