--- a/views/shared/__main_header.ejs
+++ b/views/shared/__main_header.ejs
@@ -1,9 +1,11 @@
 <!-- BEGIN .app-heading -->
+
 <div class="main-header">
 	<!-- Logo Header -->
+
 	<div class="logo-header" data-background-color="white">
 		<a href="/dashboard" class="logo">
-			<img src="/img/logo.jpg" width="108" alt="navbar brand" class="navbar-brand">
+			<img src="/img/logo.jpg" id="imageid" width="108" alt="navbar brand" class="navbar-brand">
 		</a>
 		<button class="navbar-toggler sidenav-toggler ml-auto" type="button" data-toggle="collapse" data-target="collapse"
 			aria-expanded="false" aria-label="Toggle navigation">
@@ -287,4 +289,20 @@
 				</div>
 			</div> -->
 </div>
+<script>
+	function setImage(){
+	if(window.location.href.includes('postboxetc.com') || window.location.href.includes('https://tracking.postboxesetc.com/') || window.location.href.includes('postbox')  ){
+	  
+		document.getElementById("imageid").src="/img/postboxlogo.jpg";
+	
+	}else{
+		document.getElementById("imageid").src="/img/logo.jpg";
+	
+	
+		
+
+	}}
+	setImage();
+
+   </script>
 <!-- END: .app-heading -->
