--- a/views/index.ejs
+++ b/views/index.ejs
@@ -53,7 +53,7 @@
         "
       >
         <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
-        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "More Than A Post Box" : "Always On Time" %></p>
+        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "CHANGE_IF_WANT_IN_ADMIN" ? "Much More than a Post Box" : "Always On Time" %></p>
       </div>
       <div
         class="
