--- a/views/pages/customerUploadInvoices.ejs
+++ b/views/pages/customerUploadInvoices.ejs
@@ -45,9 +45,9 @@
                 <th>
                   Invoice Status
                 </th>
-                <th>Invoices Accepted by 9to5</th>
+                <th>Invoices Accepted</th>
                
-                <th>Invoices Uploaded by Customer
+                <th>Invoices Uploaded
                   <th>Actions</th>
                 </th>
               </tr>
