--- a/views/signup.ejs
+++ b/views/signup.ejs
@@ -58,7 +58,7 @@
         "
       >
         <h1 class="title fw-bold text-white mb-3"><%= process.CLIENT_URL == "postboxesetc" ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
-        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "postboxesetc" ? "Much More than a Post Box" : "Always On Time" %></p>
+        <p class="subtitle text-white op-7"><%= process.CLIENT_URL == "postboxesetc" ? "Much More Than A Post Box" : "Always On Time" %></p>
       </div>
       <div
         class="
