--- a/views/password-set-new-customer.ejs
+++ b/views/password-set-new-customer.ejs
@@ -55,7 +55,7 @@
         "
       >
         <h1 class="title fw-bold text-white mb-3"><%= postbox == true ? "Post Boxes ETC" : "9-5 Import Portal" %></h1>
-        <p class="subtitle text-white op-7"><%= postbox == true ? "Much More than a Post Box" : "Always On Time" %></p>
+        <p class="subtitle text-white op-7"><%= postbox == true ? "Much More Than A Post Box" : "Always On Time" %></p>
       </div>
       <div
         class="
