--- a/views/404.ejs
+++ b/views/404.ejs
@@ -109,7 +109,7 @@ body{
 <body class="page-not-found" cz-shortcut-listen="true" >
 	<div class="wrapper not-found">
 		<h1 class="animated fadeIn">404</h1>
-		<div class="desc animated fadeIn"><span>OOPS!</span><br>Looks like you get lost</div>
+		<div class="desc animated fadeIn"><span>OOPS!</span><br>Looks like you got lost.</div>
 		<a href="" id="back" class="btn btn-primary btn-back-home mt-4 animated fadeInUp">
 			<span class="btn-label mr-2">
 				<i class="flaticon-home"></i>
@@ -132,11 +132,16 @@ body{
 
 		document.getElementById("back").href="/postbox/login"
 	
-	}else{
+	}else if(window.location.href.includes('9to5-qa.sprocket.solutions') || window.location.href.includes('https://9to5-qa.sprocket.solutions/') || window.location.href.includes('https://9to5.sprocket.solutions/') ||  window.location.href.includes('9to5.sprocket.solutions') ){
 
+		document.getElementById("back").href = "/"
+
+	}
+  else{
 		document.getElementById("back").href = "/customer/login"
-
-	}}
+    
+  }
+}
 	setback();
 </script>
 </body></html>
