--- a/views/404.ejs
+++ b/views/404.ejs
@@ -9,7 +9,7 @@
 	
 	<!-- Fonts and icons -->
 	<script src="./404_files/webfont.min.js.download"></script>
-	<link rel="stylesheet" href="./404_files/css" media="all"><link rel="stylesheet" href="./404_files/fonts.min.css" media="all"><script>
+	<link rel="stylesheet" href="/assets/css/fonts.min.css" media="all"><script>
 		WebFont.load({
 			google: {"families":["Lato:300,400,700,900"]},
 			custom: {"families":["Flaticon", "Font Awesome 5 Solid", "Font Awesome 5 Regular", "Font Awesome 5 Brands", "simple-line-icons"], urls: ['../assets/css/fonts.min.css']},
@@ -22,6 +22,8 @@
 	<!-- CSS Files -->
 	<link rel="stylesheet" href="/assets/css/bootstrap.min.css">
 	<link rel="stylesheet" href="/assets/css/atlantis.css">
+	
+
 
 
     <style>
