--- a/views/404.ejs
+++ b/views/404.ejs
@@ -111,7 +111,8 @@ body{
 <body class="page-not-found" cz-shortcut-listen="true" >
 	<div class="wrapper not-found">
 		<h1 class="animated fadeIn">404</h1>
-		<div class="desc animated fadeIn"><span>OOPS!</span><br>Looks like you got lost.</div>
+		<div class="desc animated fadeIn"><span>OOPS!</span><br>Looks like you are lost.
+    </div>
 		<a href="" id="back" class="btn btn-primary btn-back-home mt-4 animated fadeInUp">
 			<span class="btn-label mr-2">
 				<i class="flaticon-home"></i>
