--- a/views/footer.ejs
+++ b/views/footer.ejs
@@ -30,7 +30,7 @@
 	  	
 	}else{
 		
-		document.getElementById('footertext').value = "9-5 Imports"
+		document.getElementById('footertext').value = "9-5 Import"
 
 
 	}}
