--- a/views/404.ejs
+++ b/views/404.ejs
@@ -133,7 +133,7 @@ body{
 	  
 		
 
-		document.getElementById("back").href="/postbox/login"
+		document.getElementById("back").href="/customer/postbox/login"
 	
 	}else if(window.location.href.includes('9to5-qa.sprocket.solutions') || window.location.href.includes('https://9to5-qa.sprocket.solutions/') || window.location.href.includes('https://9to5.sprocket.solutions/') ||  window.location.href.includes('9to5.sprocket.solutions') ){
 
